--- a/googleproject.css
+++ b/googleproject.css
@@ -3,10 +3,10 @@
     height: 300px;
     margin: 200px auto -310px auto;
 }
-.googlelogo{
+.googleLogo{
     width: 270px;
 }
-.searchcontainer{
+.searchContainer{
     display: flex;
     justify-content: space-evenly;
     width: 482px;
@@ -15,7 +15,7 @@
     border: 1px solid lightgray;
     border-radius: 32px;
 }
-.searchcontainer:hover{
+.searchContainer:hover{
     transform: scale(1);
     border: 0px;
     box-shadow: 0px 1px 5px 0px lightgray;
@@ -32,7 +32,7 @@
     color: cornflowerblue;
     order: 2;
 }
-.searchinput{
+.searchInput{
     width: 390px;
     height: 30px;
     margin: 6px auto;
@@ -43,8 +43,33 @@
 .footer{
     position: fixed;
     bottom: 0;
-    height: 5%;
+    height: 40px;
     width: 100%;
-    background-color: black;
+    border-top: 1px solid #e4e4e4;
+    background-color: #F2F2F2;
     color: white;
+    display: flex;
+    justify-content: space-between;
+}
+.left{
+    font-family: arial, sans-serif;
+    font-size: 13px;
+    height: 40px;
+    width: 300px;
+}
+.right{
+    font-family: arial, sans-serif;
+    font-size: 13px;
+    height: 40px;
+    width: 300px;
+}
+.container{
+    display: flex;
+}
+.link{
+    margin: auto;
+}
+a{
+    color: #5F6367;
+    text-decoration: none;
 }
