--- a/googleproject.css
+++ b/googleproject.css
@@ -1,3 +1,56 @@
+.header{
+    display: flex;
+    justify-content: space-between;
+    height: 60px; 
+    width: 100%;
+    position: fixed;
+    top: 0;
+}
+.hed1{
+    font-family: arial, sans-serif;
+    font-size: 13px;
+    width:  200px;
+    height: 40px;
+    margin: auto 0px auto 0px;
+    order:1;
+}
+.about{
+    padding: 0px 0px 0px 20px;
+}
+.store{
+    padding: 0px 70px 0px 0px;
+}
+.hed2{
+    font-family: arial, sans-serif;
+    font-size: 13px;
+    width:  300px;
+    height: 40px;
+    margin: auto 0px auto 0px;
+    order:2;
+}
+.gmail{
+    padding: 0px 0px 0px 30px;
+}
+.images{
+
+}
+.fa-th{
+    color: #5F6367; 
+    margin: auto;
+}
+.signin{
+    display: grid;
+    background-color: #4285f4;
+    color: white;
+    font-weight: bold;
+    border-radius: 2px;
+    width:  70px;
+    height: 30px;
+    margin: auto 40px auto auto;
+}
+.sign{
+    margin: auto;
+}
 .logo{
     width: 270px;
     height: 300px;
@@ -5,11 +58,12 @@
 }
 .googleLogo{
     width: 270px;
+    height: auto;
 }
 .searchContainer{
     display: flex;
     justify-content: space-evenly;
-    width: 482px;
+    width:  482px;
     height: 44px;
     margin: 130px auto;
     border: 1px solid lightgray;
@@ -33,18 +87,50 @@
     order: 2;
 }
 .searchInput{
-    width: 390px;
+    width:  390px;
     height: 30px;
     margin: 6px auto;
     border: 0;
     outline-width: 0;
+    font: 16px arial,sans-serif;
     order: 1;
+}
+.buttons{
+    width:  400px;
+    height: 50px;
+    margin: -110px auto 0px auto;
+    display: flex;
+    justify-content: center;
+}
+.button:hover{
+    color: black;
+    box-shadow: 0px 1px lightgray;
+    border: 1px solid darkgray;
+}
+.button{
+    border: 1px solid #f2f2f2;
+    color: #5F6368;
+    font-family: arial, sans-serif;
+    font-size: 14px;
+    border-radius: 4px;
+    height: 36px;
+    text-align: center;
+    background-color: #F2F2F2;
+    margin: 5px;
+}
+.search{
+    order: 1;
+    width: 127px;
+}
+.lucky{
+    order: 2;
+    width: 150px;
 }
 .footer{
     position: fixed;
     bottom: 0;
     height: 40px;
-    width: 100%;
+    width:  100%;
     border-top: 1px solid #e4e4e4;
     background-color: #F2F2F2;
     color: white;
@@ -55,19 +141,22 @@
     font-family: arial, sans-serif;
     font-size: 13px;
     height: 40px;
-    width: 300px;
+    width:  300px;
 }
 .right{
     font-family: arial, sans-serif;
     font-size: 13px;
     height: 40px;
-    width: 300px;
+    width:  300px;
 }
 .container{
     display: flex;
 }
 .link{
     margin: auto;
+}
+.link:hover{
+    text-decoration: underline;
 }
 a{
     color: #5F6367;
