--- a/googleproject.css
+++ b/googleproject.css
@@ -31,10 +31,8 @@
 .gmail{
     padding: 0px 0px 0px 30px;
 }
-.images{
-
-}
 .fa-th{
+    font-size: 17px;
     color: #5F6367; 
     margin: auto;
 }
